# cpp-template

./: .travis.yml  CMakeLists.txt  README.md  codecov.yml  conanfile.txt
cmake/: CompilerWarnings.cmake
include/: lib.h
src/: CMakeLists.txt  lib.cpp  main.cpp
tests/: CMakeLists.txt  tests-dummy.cpp
